--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.20",
+    "@types/express-session": "^1.17.10",
     "@types/http-errors": "^2.0.3",
     "@types/morgan": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
@@ -25,9 +26,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
